Fixed overflow in smaller screens

--- a/css/style-small.css
+++ b/css/style-small.css
@@ -1,10 +1,15 @@
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 400px) and (max-width: 800px) {
+
+.form, .legend{
+    height: 30%;
+}
+
 
 .form{
     display: block;
     text-align: center;
     width: 100%;
-    height: 30%;
+    /* height: 30%; */
     bottom: 0;
     top: initial;
     left: 0;
@@ -32,7 +37,7 @@ button{
 .legend{
     max-width: initial;
     width: 100%;
-    height: 30%;
+    /* height: 30% */;
     bottom: 0;
     top: initial;
     left: 0;
@@ -60,15 +65,71 @@ h3{
 
 
 
+}
+
+@media screen and (max-width: 400px) {
+    .form, .legend{
+        height: 40%;
+    }
+    .toplist{
+        bottom: 40%;
+    }
 
 
 
+    .form{
+        display: block;
+        text-align: center;
+        width: 100%;
+        bottom: 0;
+        top: initial;
+        left: 0;
+        padding: 0;
+
+    }
+    label{
+        width: 100%;
+        display: inline-block;
+        margin: 0 auto;
+
+    }
+    input{
+        padding: 2px;
+        max-width: 50%;
+        margin: 0 25%;
 
 
+    }
+    button{
+        display: block;
+        margin: 10px auto;
+    }
 
+    .legend{
+        max-width: initial;
+        width: 100%;
+        bottom: 0;
+        top: initial;
+        left: 0;
+    }
 
+    .toplist{
+        max-width: initial;
+        width: 100%;
+        left: 0;
+        top: initial;
+    }
 
+    h3{
+        padding: 0 20px;
+        font-size: 0.9em;
+    }
 
+    .btn-tab{
+        margin: 0;
+        font-size: 1em;
+        display: inline-block;
+    }
 
 
 
